--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,9 @@
 body {
-  margin: 0;
   font-family: 'Labrada',sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  margin: 0;
+  padding: 20px 40px;
 }
 
 code {
@@ -18,6 +19,5 @@ a {
 
 *{
   box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+  
 }
